Fixed vertical scrollbar again

--- a/css/styles.css
+++ b/css/styles.css
@@ -213,5 +213,5 @@ html, body {
     overflow-x: hidden;
 }
 html{
-	overflow-y: auto;
+	overflow-y: scroll;
 }
